--- a/signup.html
+++ b/signup.html
@@ -4,28 +4,42 @@
 <meta charset="utf-8">
 <title>Untitled Document</title>
 
-<link href="../css/signup.css" rel="stylesheet" type="text/css" media="screen">
+<link href="css/signup.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body>
- <form action="action_page.php" style="border:1px solid #ccc">
+ <form action="insert.php"  method="post" style="border:1px solid #ccc">
   <div class="container">
+    <ol class="forms">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
     <hr>
 
-    <label><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
+    
+      <li><label><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="username" required></li>
+    
 
-    <label><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <li><label><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="email" required></li>
 
-    <label><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <li><label><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="password" required></li>
 
-    <label>
+    <li><label><b>Repeat Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="passwordRpt" required></li>
+
+     <li><label><b>Gender</b></label>
+    <input type="radio"  name="gender" required value="gender">Male
+    <input type="radio"  name="gender" required value="gender">Female</li>
+
+    <li><label><b>Phone</b></label>
+    <input type="tel" placeholder="Phone" name="phone" required></li>
+
+    <li><label>
       <input type="checkbox" checked="checked" style="margin-bottom:15px"> Remember me
-    </label>
+    </label></li>
+ 
 
     <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
